Altered web app, added UI and hacktxfa2019.jsx

--- a/counter-app/public/manifest.json
+++ b/counter-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "HackTxFa2019",
+  "name": "ESG of companies",
   "icons": [
     {
       "src": "favicon.ico",
