--- a/counter-app/package.json
+++ b/counter-app/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "counter-app",
+  "name": "hacktxfa2019-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.3.1",
+    "missing": "0.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
