--- a/counter-app/package.json
+++ b/counter-app/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "missing": "0.0.1",
+    "neo4j-driver": "^1.6.1",
+    "neo4j-graph-renderer": "^0.1.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-virtualized": "^9.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
