--- a/counter-app/package.json
+++ b/counter-app/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "mdbreact": "^4.22.0",
     "missing": "0.0.1",
     "neo4j-driver": "^1.6.1",
     "neo4j-graph-renderer": "^0.1.6",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.11.0",
+    "react-chartjs-2": "^2.8.0",
+    "react-dom": "^16.11.0",
     "react-scripts": "3.1.1",
-    "react-virtualized": "^9.19.0"
+    "react-virtualized": "^9.19.0",
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
