--- a/smart-investment/package.json
+++ b/smart-investment/package.json
@@ -9,6 +9,7 @@
     "neo4j-driver": "^1.6.1",
     "neo4j-graph-renderer": "^0.1.6",
     "react": "^16.11.0",
+    "react-autosuggest": "^9.4.3",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.1.1",
