--- a/smart-investment/package.json
+++ b/smart-investment/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "mdbreact": "^4.22.0",
     "missing": "0.0.1",
