--- a/smart-investment/package.json
+++ b/smart-investment/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.19.0",
-    "reactstrap": "^8.1.1",
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
